--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,29 @@
 page-home {
+  #info-row {
+    ion-col {
+      ion-avatar img {
+        margin: 0 auto;
+        border-radius: 50%;
+      }
+    }
+  }
+
+  #contact-icons {
+    ion-icon {
+      font-size: 40px;
+    }
+  }
+
+  .social-row {
+    ion-avatar {
+      margin-top: 0.8rem;
+    }
+    p {
+      font-size: 1.6rem;
+    }
+    .social-interaction-row {
+      font-size: 20px;
+    }
+  }
 
 }
